[package]
name = "metalsharp-backend"
version = "0.37.3"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
dirs = "6"
walkdir = "2"
zstd = "0.13"
ureq = { version = "3", features = ["json"] }
toml = "0.8"
rusqlite = { version = "0.40", features = ["bundled"] }
ctrlc = "3"
libc = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
