[package]
name = "metalsharp-backend"
version = "0.55.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
dirs = "6"
walkdir = "2"
zstd = "0.13"
ureq = { version = "3", default-features = false, features = ["json", "native-tls"] }
toml = "0.8"
rusqlite = { version = "0.39", features = ["bundled"] }
ctrlc = "3"
libc = "0.2"
zip = { version = "8", default-features = false, features = ["deflate"] }
sha2 = "0.11"
