[package]
name = "metalsharp-backend"
version = "0.56.5"
edition = "2021"

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tiny_http = "0.12"
dirs = "6"
walkdir = "2"
zstd = "0.13"
ureq = { version = "3", features = ["json"] }
toml = "1.1.3+spec-1.1.0"
rusqlite = { version = "0.40", features = ["bundled"] }
ctrlc = "3"
libc = "0.2.187"
zip = { version = "8", default-features = false, features = ["deflate"] }
sha2 = "0.11"
